app/css/style.scss
/*! style.css */

$chunk_height: rem-calc(60px);
$goal_padding: rem-calc(10px);
$top_padding: rem-calc(40px);
$radius: rem-calc(15px);

/*
html {
  height: 100%;
}

body {
  min-height: 100%;
}
*/

.row.top {
  padding: $top_padding 0 $top_padding 0;
}

.row {
  /*max-width: 97%;*/
  max-width: 100%;
  /*
  To test Compass
  @include background-image(radial-gradient(45px 45px, cyan 10px, dodgerblue 30px));
  */
}

/* A row of a minimum height */
.chunk {
  min-height: $chunk_height;
  line-height: $chunk_height;
  vertical-align: middle;

  h3 {
    line-height: $chunk_height;
  }
}

/***** Create a ride *****/

/* The steps at the top of the create playlist page */
.workflow {
  li span {
    display: block;
    float: left;
    border-radius: 50%;

    width: 30px;
    height: 30px;

    color: $white;
    font-weight: bold;
    text-align: center;
    font-size: 18px;
  }

  .completed {
    span {
      background: $red_medium;
    }
    a {
      color: $red_medium;
    }
  }

  .upcoming {
    span {
      background: $grey_light;
    }
    a {
      color: $grey_medium;
    }
  }

  a {
    padding-top: 3px;
    padding-left: 36px;
  }
}

input[type="text"].class_name {
  border-width: 0px;
  box-shadow: none;
  border-radius: $radius;
  background-color: $blue_light;
  font-size: $h3-font-size;
  font-weight: bold;
  color: $black;
  padding: 10px;
  height: 70px;
}

.playlist-container {
  background: $grey_black;
}

.goals-container {
  background: $white;
}

.ride-type {
  border-top: 1px solid $grey_lighter;
  font-size: $h5-font-size;
  color: $grey_medium;
}

.length {
  border: 1px solid $grey_lighter;
  color: $grey_light;
  border-radius: 3px;
  padding: 5px;
}

.goal {
  background-color: $white;
  padding: rem-calc(5px) 0 rem-calc(5px) 0;

  .goal-container {
    border: 1px solid $grey_lighter;
    padding: rem-calc(10px) rem-calc(20px) rem-calc(6px) rem-calc(20px);
  }

  .goal-name, .goal-meta {
    cursor: pointer;
    @include user-select('none');
  }

  h4 {
    line-height: rem-calc(35px);
  }

  .bpm {
    color: $grey_light;
    line-height: rem-calc(45px);
    text-align: right;
  }

  .active {
    border: 2px solid $red;
  }
}

#track-name {
  font-weight: bold;
}

.notes {
  textarea {
    margin-bottom: 0px;
  }
  .maxlength {
    float: right;
    font-size: smaller;
    color: $grey_light;
  }
  .error {
    color: $red;
    background: none;
  }
}

/* The right tracks sidebar */

.tracks {
  color: $white;

  h3 {
    color: $white;
  }

  .showing {
    border-bottom: 1px solid $white;
    padding-bottom: rem-calc(10px);
    margin-bottom: rem-calc(30px);
  }

  .search {
    margin-bottom: rem-calc(30px);

    input {
      border-width: 0px;
      color: $grey_light;
      background: $black url('/img/search_white.svg') no-repeat;
      background-position: right 10px center;
      padding-left: 10px;
    }
    ::-webkit-input-placeholder {
      color: $grey_light;
    }
    :-moz-placeholder {
      /* Firefox 18- */
      color: $grey_light;
    }
    ::-moz-placeholder {
      /* Firefox 19+ */
      color: $grey_light;
    }
    :-ms-input-placeholder {
      color: $grey_light;
    }
  }
}

.track {
  padding-top: rem-calc(10px);
  padding-bottom: rem-calc(10px);
  line-height: 18px;
  border-bottom: 2px solid $grey_dark;
  background-color: $grey_black;
  cursor: move;
  color: $white;

  .columns {
    padding-left: rem-calc(10px);
    padding-right: rem-calc(10px);
  }

  .track-name {
    display: block;
    font-weight: bold;
    clear: both;
  }
  .artist {
    color: $white_light;
  }
  .genre {
    font-weight: 100;
    text-align: right;
  }
  .bpm {
    color: $blue_dark;
  }
  .time {
    font-weight: bold;
  }
  .add, .remove {
    font-size: $h3-font-size;
    font-weight: bold;
  }
  .remove {
    cursor: pointer;
    text-indent: -2000px;
    background: url('/img/remove.svg') no-repeat;
    background-position: center;
  }
}

.play {
  cursor: default;
  text-indent: -2000px;
  min-height: 30px;
  background: url('/img/play.svg') no-repeat;
  background-position: center;
}

.playing {
  background: url('/img/playing_dark.gif') no-repeat;
  background-position: center;
}

.bin {
  display: block;
  height: 60px;
  line-height: 60px;
  vertical-align: middle;
  text-align: center;
  min-width: 100%;
  border: 2px dotted $blue_medium;
  color: $blue_medium;
  background: $blue_light;
  margin-top: 20px;
  margin-bottom: 20px;
}

.track.dropped {
  line-height: 40px;
  vertical-align: middle;
  cursor: default;
  background-color: $grey_black;
}

.dropped {
  .empty-text {
    display: none;
  }
  text-align: left;

  .track-name {
    display: inline;
  }

  .artist {
    color: $white;
    padding-left: 5px;
  }
}

.bin.dropped {
  border: 0px;
}

goal_option {
  display: block;
  background: $grey_lighter;
  color: $grey_light;
  padding: 10px 20px 10px 20px;
  border-radius: 6px;

  em {
    color: $grey_black;
  }

  hr {
    border: solid $grey_medium;
    border-width: 1px 0 0;
  }
}

/* TODO: remove me - for initial structure building only  */

.tracks {
  min-height: 100%;
}

